need to fix alignment

--- a/styles.css
+++ b/styles.css
@@ -295,3 +295,66 @@ section {
     bottom: 2.5rem;
 }
 
+.details-container {
+    padding: 1rem;
+    flex: 1;
+    background: rgb(209, 200, 188);
+    border-radius: 2rem;
+    border: rgb(59, 15, 15) 0.1rem solid;
+    border-color: rgb(128, 30, 30);
+    text-align: center;
+}
+
+.section-container {
+    gap: 4rem;
+    height: 80%;
+}
+
+.section__pic-container {
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+.text-container p {
+    text-align: justify;
+}
+
+/* EXPERIENCE SECTION */
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(128, 30, 30);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container{
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article .icon {
+    cursor : default;
+}
